<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Music Genre"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#F5F7F8"
        android:minHeight="48dp"
        android:theme="@style/CustomSpinnerText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="308dp"
        android:layout_height="146dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="149dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/image1"
            android:scaleType="fitCenter"
            android:src="@drawable/radiohead" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="154dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/image3"
            android:scaleType="fitCenter"
            android:src="@drawable/nirvana" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="304dp"
        android:layout_height="157dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326">

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/image5"
            android:scaleType="fitCenter"
            android:src="@drawable/clairo"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="-6dp" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/image6"
            android:scaleType="fitCenter"
            android:src="@drawable/taylor"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="-14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="309dp"
        android:layout_height="153dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.700">

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/image7"
            android:scaleType="fitCenter"
            android:src="@drawable/madison" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/image8"
            android:scaleType="fitCenter"
            android:src="@drawable/billie" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="309dp"
        android:layout_height="153dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.700">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/image2"
            android:scaleType="fitCenter"
            android:src="@drawable/mcr" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/image4"
            android:scaleType="fitCenter"
            android:src="@drawable/arctic" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView1"
        android:layout_width="173dp"
        android:layout_height="29dp"
        android:gravity="center"
        android:text="My Chemical Romance"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="173dp"
        android:layout_height="29dp"
        android:gravity="center"
        android:text="Arctic Monkey"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="88dp"
        android:layout_height="30dp"
        android:layout_marginBottom="11dp"
        android:gravity="center"
        android:text="Radiohead"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="70dp"
        android:layout_height="31dp"
        android:layout_marginBottom="11dp"
        android:gravity="center"
        android:text="Nirvana"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="70dp"
        android:layout_height="31dp"
        android:layout_marginBottom="11dp"
        android:gravity="center"
        android:text="Clairo"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="106dp"
        android:layout_height="28dp"
        android:layout_marginBottom="11dp"
        android:gravity="center"
        android:text="Taylor Swift"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_marginBottom="11dp"
        android:gravity="center"
        android:text="Madison Beer"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="109dp"
        android:layout_height="32dp"
        android:layout_marginBottom="11dp"
        android:gravity="center"
        android:text="Billie Eilish"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813" />

</androidx.constraintlayout.widget.ConstraintLayout>
